# GnssBox

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  broadcast_test.cpp  getopt3_test.cpp  getopt_test.cpp  lambda_test.cpp  rtk.cpp  rtk_test.cpp  rx_obs_test.cpp  socket_test.cpp  spp.cpp  time_convert.cpp  xyz_diff.cpp
lib/coord/: NEUUtil.cpp  Position.cpp  ReferenceFrame.cpp  ReferenceFrame.hpp  Xv.hpp  Xvt.cpp
lib/coord/coord/: EllipsoidModel.hpp  GALEllipsoid.hpp  GPSEllipsoid.hpp  NEUUtil.hpp  PZ90Ellipsoid.hpp  Position.hpp  WGS84Ellipsoid.hpp  Xvt.hpp
lib/gnss/: ARLambda.cpp  ARLambda.hpp  BDSEphemeris.cpp  BDSEphemeris.hpp  ChooseOptimalTypes.cpp  ChooseOptimalTypes.hpp  ClockSatStore.cpp  ClockSatStore.hpp  ComputeCombination.cpp  ComputeCombination.hpp  ComputeDerivative.cpp  ComputeDerivative.hpp  ComputeElevWeights.cpp  ComputeElevWeights.hpp  ComputePrefit.cpp  ComputePrefit.hpp  ComputeSatPos.cpp  ComputeSatPos.hpp  ComputeTropModel.cpp  ComputeTropModel.hpp  ConvertObs.cpp  ConvertObs.hpp  DataStructures.cpp  DataStructures.hpp  DeltaOp.cpp  DeltaOp.hpp  DetectCSMW.cpp  DetectCSMW.hpp  DumpRinex.cpp  DumpRinex.hpp  EpochXvStore.cpp  EpochXvStore.hpp  EquSysForPoint.cpp  EquSysForPoint.hpp  Equation.cpp  Equation.hpp  FileStore.hpp  FilterCode.cpp  FilterCode.hpp  FilterSPP.cpp  (+62 more)
lib/math/: CProbability.cpp  CProbability.hpp  MathBase.hpp  MathUtils.cpp  MathUtils.h  MiscMath.hpp  Triple.cpp  Triple.hpp
lib/time/: BDSWeekSecond.hpp  CivilTime.cpp  CivilTime.hpp  CommonTime.cpp  CommonTime.hpp  ConvertCalendar.cpp  ConvertCalendar.hpp  ConvertTime.cpp  ConvertTime.hpp  Counter.cpp  Counter.hpp  GALWeekSecond.hpp  GPSWeek.cpp  GPSWeek.hpp  GPSWeekSecond.hpp  JulianDate.cpp  JulianDate.hpp  MJD.cpp  MJD.hpp  QZSWeekSecond.hpp  SystemTime.cpp  SystemTime.hpp  TimeConstants.hpp  TimeSystem.cpp  TimeSystem.hpp  UnixTime.cpp  UnixTime.hpp  Week.cpp  Week.hpp  WeekSecond.cpp  WeekSecond.hpp  YDSTime.cpp  YDSTime.hpp
lib/util/: ConfigReader.cpp  ConfigReader.hpp  Exception.cpp  Exception.hpp  OptionUtil.hpp  StringUtils.hpp
test/getopt/: README  getopt_test.sh  test01.txt
test/rtk/: plot_rtk.sh  rtk.sh  spp.conf
test/spp/: plot_rtk.sh  rtk.sh  spp.conf  spp_test.sh
test/time/: README  time_convert.sh
textbook/broadcast/: BRST00FRA_R_20200010000_01D_MN.rnx  README.md  broadcast_test.sh  plot_diff_xvt.sh  result.txt
textbook/getopt/: result.txt  test.txt  test02.txt
